// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component should render avatar component anonymoys 1`] = `
<View
  size="standard"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFAA33",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Image
    accessibilityRole="image"
    size="standard"
    source={
      Object {
        "testUri": "../../../src/assets/images/anonymous.jpg",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 12,
          "height": 24,
          "width": 24,
        },
      ]
    }
    testID="avatar"
    type="anonymous"
  />
</View>
`;

exports[`Avatar component should render avatar component icon 1`] = `
<View
  size="standard"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFAA33",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessibilityRole="image"
    name="filled-default-mockup"
    size="standard"
    style={
      Array [
        Object {
          "color": "#333333",
        },
      ]
    }
    testID="avatar"
  >
    filled-default-mockup
  </Text>
</View>
`;

exports[`Avatar component should render avatar component image 1`] = `
<View
  size="standard"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFAA33",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Image
    accessibilityRole="image"
    size="standard"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 12,
          "height": 24,
          "width": 24,
        },
      ]
    }
    testID="avatar"
    type="image"
  />
</View>
`;

exports[`Avatar component should render avatar component letter 1`] = `
<View
  size="standard"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFAA33",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessibilityRole="text"
    size="standard"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#333333",
          "fontFamily": "Roboto",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 18,
        },
      ]
    }
    testID="avatar"
    type="letter"
  >
    DS
  </Text>
</View>
`;

exports[`Avatar component should render avatar with a deprecated size 1`] = `
<View
  size="huge"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFAA33",
        "borderRadius": "largeXX",
        "height": "largeXX",
        "justifyContent": "center",
        "width": "largeXX",
      },
    ]
  }
>
  <Text
    accessibilityRole="text"
    size="huge"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#333333",
          "fontSize": 24,
        },
      ]
    }
    testID="avatar-letter"
    type="letter"
  >
    D
  </Text>
</View>
`;
